phase1 - pre-model choosing.

--- a/02- Data Cleaning & EDA.ipynb
+++ b/02- Data Cleaning & EDA.ipynb
@@ -4204,7 +4204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4216,7 +4216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -4226,18 +4226,18 @@
        "Categories (5, int64): [0 < 1 < 2 < 3 < 4]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    " df.burak.unique()"
+    " df.days_in_waiting_list_range.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -4281,14 +4281,14 @@
       " 29  total_of_special_requests       119210 non-null  int64   \n",
       " 30  reservation_status              119210 non-null  object  \n",
       " 31  reservation_status_date         119210 non-null  object  \n",
-      " 32  year                            119210 non-null  object  \n",
-      " 33  month                           119210 non-null  object  \n",
+      " 32  year                            119210 non-null  int32   \n",
+      " 33  month                           119210 non-null  int32   \n",
       " 34  day                             119210 non-null  object  \n",
       " 35  local                           119210 non-null  int32   \n",
       " 36  burak                           119210 non-null  category\n",
       " 37  days_in_waiting_list_range      119210 non-null  category\n",
-      "dtypes: category(2), float64(4), int32(1), int64(23), object(8)\n",
-      "memory usage: 33.4+ MB\n"
+      "dtypes: category(2), float64(4), int32(3), int64(23), object(6)\n",
+      "memory usage: 32.5+ MB\n"
      ]
     }
    ],
